# xhgc-pack

./: README.md  XHGC_cart_bin_v2格式规范.md  api.py  main.py  project_tree.txt  pyproject.toml
.trae/rules/: project_rules.md
config/: load.py
docs/: st-luac-compilation-guide.md  stm32h743-luaport-api.md  xhgc-cartbin-format-spec-v2.2.md  xhgc-pack-cli-usage.md  xhgc-pack-packjson-spec-v1.1.md
format/: header.py
pipeline/: build_header.py
src/xhcart_core/: api.py  cli.py
src/xhcart_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/xhcart_core/config/: load.py  pack_spec.py
src/xhcart_core/domain/: errors.py
src/xhcart_core/format/xhgc/: addr_table.py  header.py
src/xhcart_core/pipeline/: build_data.py  build_entry.py  build_icon.py  build_manf.py
src/xhcart_core/tools/: img_pillow.py  text_a8.py
src/xhcart_core/utils/: align.py  hashing.py  io.py  path.py
tests/: pack.json  test_data.py  test_entry.py  test_header.py  test_icon.py  test_img_pillow.py  test_text_a8.py
tests/script/: main.lua
utils/: hashing.py
